# Rasterizer-OpenGL

OpenGL/a/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  proj2A.tar
OpenGL/a/project2A.app/Contents/MacOS/: project2A
OpenGL/b/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  proj2b.tar  project2B.cxx
OpenGL/b/project2B.app/Contents/: Info.plist
OpenGL/b/project2B.app/Contents/MacOS/: project2B
Rasterizer/a/: proj1a.tar
Rasterizer/b/: CMakeCache.txt  Makefile  cmake_install.cmake
Rasterizer/b/project1B.app/Contents/MacOS/: project1B
Rasterizer/c/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  project1C.tar  project1Cblah.cxx
Rasterizer/c/project1A.app/Contents/MacOS/: project1A
Rasterizer/c/temp/: project1C.cxx  project1Cnew.cxx  senahc.cxx
Rasterizer/d/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  proj1D  proj1D.tar  project1D.cxx
Rasterizer/d/project1D.app/Contents/MacOS/: project1D
Rasterizer/e/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
Rasterizer/e/project1E.app/Contents/MacOS/: project1E
Rasterizer/f/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  proj1F.tar  project1F.cxx
Rasterizer/f/project1F.app/Contents/MacOS/: project1F
Rasterizer/finished/: CMakeCache.txt  Makefile  camera.cxx  cmake_install.cmake  triangle.h
SolarSystemOpenGL/: CMakeCache.txt  Makefile  cmake_install.cmake
SolarSystemOpenGL/solar.app/Contents/: Info.plist
SolarSystemOpenGL/solar.app/Contents/MacOS/: solar
(+2 files in other folders)
